fixed box alignment issues

--- a/contact/contact.css
+++ b/contact/contact.css
@@ -1,10 +1,10 @@
 .purple-box {
-  margin-top: 0.1rem;
+  margin-top: 0.01rem;
   position: relative;
 }
 
 .grid-container {
-  margin-left: -2.2rem;
+  margin-left: -2.15rem;
 }
 
 .main-content-arrow-1 {
