--- a/projects/projects.css
+++ b/projects/projects.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 .purple-box {
-  margin-top: -33.9rem;
+  margin-top: -33.95rem;
 }
 
 /* PROJECTS CAROUSEL */
